# src/main/java/com/michael/exercise/controllers/TeacherController.java
@@ -9,9 +9,9 @@ import org.springframework.web.bind.annotation.RestController;
 import com.michael.exercise.dtos.AddTeacherExceptionAvailabilityRequest;
 import com.michael.exercise.dtos.AddTeacherRecurringAvailabilityRequest;
 import com.michael.exercise.dtos.AddTeacherUnavailableDateRequest;
-import com.michael.exercise.dtos.GetTeacherExceptionAvailabilityResponse;
-import com.michael.exercise.dtos.GetTeacherRecurringAvailabilityResponse;
-import com.michael.exercise.dtos.GetTeacherUnavailableDateResponse;
+import com.michael.exercise.dtos.TeacherExceptionAvailabilityResponse;
+import com.michael.exercise.dtos.TeacherRecurringAvailabilityResponse;
+import com.michael.exercise.dtos.TeacherUnavailableDateResponse;
 import com.michael.exercise.mappers.TeacherMapper;
 import com.michael.exercise.models.AddTeacherExceptionAvailability;
 import com.michael.exercise.models.AddTeacherRecurringAvailability;
@@ -32,7 +32,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> addTeacherRecurringAvailability(AddTeacherRecurringAvailabilityRequest request) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         AddTeacherRecurringAvailability recurringAvailability = teacherMapper.toAddTeacherRecurringAvailability(teacherId, request);
         teacherService.addTeacherRecurringAvailability(recurringAvailability);
         return ResponseEntity
@@ -41,10 +41,10 @@ public class TeacherController implements TeacherApi {
     }
 
     @Override
-    public ResponseEntity<List<GetTeacherRecurringAvailabilityResponse>> getTeacherRecurringAvailabilities() {
-        int teacherId = SecurityUtil.getTeacherId();
-        List<TeacherRecurringAvailability> teacherRecurringAvailabilities = teacherService.getTeacherRecurringAvailabilities(teacherId);
-        List<GetTeacherRecurringAvailabilityResponse> response = teacherMapper.toGetRecurringAvailabilityResponseList(teacherRecurringAvailabilities);
+    public ResponseEntity<List<TeacherRecurringAvailabilityResponse>> listTeacherRecurringAvailabilities() {
+        int teacherId = SecurityUtil.getUserId();
+        List<TeacherRecurringAvailability> teacherRecurringAvailabilities = teacherService.listTeacherRecurringAvailabilities(teacherId);
+        List<TeacherRecurringAvailabilityResponse> response = teacherMapper.toRecurringAvailabilityResponseList(teacherRecurringAvailabilities);
         return ResponseEntity
                 .status(HttpStatus.OK)
                 .body(response);
@@ -52,7 +52,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> deleteTeacherRecurringAvailability(Integer recurringId) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         teacherService.deleteTeacherRecurringAvailability(teacherId, recurringId);
         return ResponseEntity
                 .noContent()
@@ -61,7 +61,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> addTeacherExceptionAvailability(AddTeacherExceptionAvailabilityRequest request) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         AddTeacherExceptionAvailability exceptionAvailability = teacherMapper.toAddTeacherExceptionAvailability(teacherId, request);
         teacherService.addTeacherExceptionAvailability(exceptionAvailability);
         return ResponseEntity
@@ -70,10 +70,10 @@ public class TeacherController implements TeacherApi {
     }
 
     @Override
-    public ResponseEntity<List<GetTeacherExceptionAvailabilityResponse>> getTeacherExceptionAvailabilities() {
-        int teacherId = SecurityUtil.getTeacherId();
-        List<TeacherExceptionAvailability> teacherExceptionAvailabilities = teacherService.getTeacherExceptionAvailabilities(teacherId);
-        List<GetTeacherExceptionAvailabilityResponse> response = teacherMapper.toGetTeacherExceptionAvailabilityResponseList(teacherExceptionAvailabilities);
+    public ResponseEntity<List<TeacherExceptionAvailabilityResponse>> listUpcomingTeacherExceptionAvailabilities() {
+        int teacherId = SecurityUtil.getUserId();
+        List<TeacherExceptionAvailability> teacherExceptionAvailabilities = teacherService.listUpcomingTeacherExceptionAvailabilities(teacherId);
+        List<TeacherExceptionAvailabilityResponse> response = teacherMapper.toTeacherExceptionAvailabilityResponseList(teacherExceptionAvailabilities);
         return ResponseEntity
                 .status(HttpStatus.OK)
                 .body(response);
@@ -81,7 +81,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> deleteTeacherExceptionAvailability(Integer exceptionId) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         teacherService.deleteTeacherExceptionAvailability(teacherId, exceptionId);
         return ResponseEntity
                 .noContent()
@@ -90,7 +90,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> addTeacherUnavailableDate(AddTeacherUnavailableDateRequest request) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         teacherService.addTeacherUnavailableDate(teacherId, request);
         return ResponseEntity
                 .status(HttpStatus.CREATED)
@@ -98,10 +98,10 @@ public class TeacherController implements TeacherApi {
     }
 
     @Override
-    public ResponseEntity<List<GetTeacherUnavailableDateResponse>> getTeacherUnavailableDates() {
-        int teacherId = SecurityUtil.getTeacherId();
-        List<TeacherUnavailableDate> teacherUnavailableDates = teacherService.getTeacherUnavailableDates(teacherId);
-        List<GetTeacherUnavailableDateResponse> response = teacherMapper.toGetTeacherUnavailableDateResponseList(teacherUnavailableDates);
+    public ResponseEntity<List<TeacherUnavailableDateResponse>> listUpcomingTeacherUnavailableDates() {
+        int teacherId = SecurityUtil.getUserId();
+        List<TeacherUnavailableDate> teacherUnavailableDates = teacherService.listUpcomingTeacherUnavailableDates(teacherId);
+        List<TeacherUnavailableDateResponse> response = teacherMapper.toTeacherUnavailableDateResponseList(teacherUnavailableDates);
         return ResponseEntity
                 .status(HttpStatus.OK)
                 .body(response);
@@ -109,7 +109,7 @@ public class TeacherController implements TeacherApi {
 
     @Override
     public ResponseEntity<Void> deleteTeacherUnavailableDate(Integer unavailableDateId) {
-        int teacherId = SecurityUtil.getTeacherId();
+        int teacherId = SecurityUtil.getUserId();
         teacherService.deleteTeacherUnavailableDate(teacherId, unavailableDateId);
         return ResponseEntity
                 .noContent()
