# src/main/java/com/michael/exercise/models/User.java
@@ -1,7 +1,5 @@
 package com.michael.exercise.models;
 
-import java.time.OffsetDateTime;
-
 import lombok.Data;
 
 @Data
@@ -12,5 +10,4 @@ public class User {
     private String email;
     private String password;
     private String role; // "STUDENT" or "TEACHER"
-    private OffsetDateTime createdAt;
 }
